@@ -1,0 +1,3 @@
+$NetBSD: DESCR,v 1.1 2013/01/19 10:22:11 manu Exp $
+
+This Nagios plugin monitors RAIDframe status
